2007-12-14  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala, vala/valasemanticanalyzer.vala,
	  vala/valasourcefile.vala: add add_type_dependency method to SourceFile

2007-12-14  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala, vala/valamemorymanager.vala: move reference
	  type check from MemoryManager to DataType

2007-12-14  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/valadatatype.vala, vala/valadelegatetype.vala,
	  vala/valafield.vala, vala/valaformalparameter.vala,
	  vala/valainterfacewriter.vala, vala/valainvokable.vala,
	  vala/valamemorymanager.vala, vala/valamethod.vala,
	  vala/valamethodtype.vala, vala/valasemanticanalyzer.vala,
	  vala/valasignal.vala, vala/valasignaltype.vala,
	  vala/valasymbolresolver.vala, vala/valavariabledeclarator.vala,
	  gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorinvocationexpression.vala: replace Invokable
	  interface by DelegateType, MethodType, and SignalType classes

2007-12-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorinvocationexpression.vala: fix exception
	  handling with ellipsis parameters

2007-12-12  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala: readd support for void UnresolvedType,
	  still required for vapigen

	* gobject-introspection/gidl.vapi: add IdlNodeUnion

	* vapigen/valagidlparser.vala: add support for unions

	* vapi/packages/libgnome-2.0/, vapi/packages/libgnomeui-2.0/: remove
	  bindings for deprecated functions

	* vapi/gconf-2.0.vapi, vapi/gio-2.0.vapi, vapi/gnome-vfs-2.0.vapi,
	  vapi/gstreamer-0.10.vapi, vapi/libgnome-2.0.vapi,
	  vapi/libgnomeui-2.0.vapi, vapi/libnotify.vapi, vapi/libsoup-2.2.vapi,
	  vapi/poppler-glib.vapi: regenerated

2007-12-12  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: support assignment of lambda
	  expressions to local variables

2007-12-12  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: verify that the `abstract', `virtual',