@@ -1,3 +1,9 @@
+2007-12-15  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valadatatype.vala, vala/valasemanticanalyzer.vala,
+	  vapi/glib-2.0.vapi: move is_type_compatible method from
+	  SemanticAnalyzer to DataType
+
 2007-12-14  Jürg Billeter  <j@bitron.ch>
 
 	* vala/valadatatype.vala, vala/valasemanticanalyzer.vala,
